--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -325,6 +325,71 @@
                 android:background="@color/divider_grey"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/clSongs"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_50sdp"
+                android:visibility="visible"
+                android:layout_marginHorizontal="@dimen/_16sdp"
+                app:layout_constraintTop_toBottomOf="@+id/view10"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/ivSongs"
+                    android:layout_width="@dimen/_36sdp"
+                    android:layout_height="@dimen/_36sdp"
+                    android:src="@drawable/song_week_icon"
+                    android:tint="@color/black"
+                    android:layout_marginStart="@dimen/_8sdp"
+                    android:background="@drawable/circle_background"
+                    android:backgroundTint="@color/otp_grey"
+                    android:padding="@dimen/_9sdp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:paddingVertical="@dimen/_8sdp"/>
+
+                <TextView
+                    android:id="@+id/tvSongs"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/urbanist_medium"
+                    android:text="@string/upload_music_songs_of_the_day_week"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_14sdp"
+                    android:layout_marginEnd="@dimen/_16sdp"
+                    app:layout_constraintEnd_toStartOf="@+id/ivDrop233"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    app:layout_constraintStart_toEndOf="@+id/ivSongs"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/ivDrop233"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/arrow_right"
+                    android:layout_marginEnd="@dimen/_8sdp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent" />
+
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:visibility="visible"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/clChange"
+                android:layout_marginHorizontal="@dimen/_16sdp"
+                android:background="@color/divider_grey"/>
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/clDonate"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_50sdp"
