--- a/app/src/main/res/layout/item_challange.xml
+++ b/app/src/main/res/layout/item_challange.xml
@@ -12,7 +12,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_200sdp">
+        android:layout_height="@dimen/_210sdp">
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/ivChallange"
@@ -73,8 +73,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/ivChallange"
-            app:layout_constraintTop_toTopOf="@+id/ivChallange"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toTopOf="@+id/ivChallange" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivTick"
@@ -84,7 +83,7 @@
             android:src="@drawable/unselected_tick_grey"
             android:layout_marginEnd="@dimen/_8sdp"
             android:translationZ="4dp"
-            android:layout_marginBottom="@dimen/_4sdp"
+            android:layout_marginBottom="@dimen/_13sdp"
             android:padding="@dimen/_3sdp"
             android:contentDescription="@string/app_name"
             app:layout_constraintBottom_toBottomOf="parent"/>
