--- a/app/src/main/res/layout/reached_your_course_limit_dialog.xml
+++ b/app/src/main/res/layout/reached_your_course_limit_dialog.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_12sdp"
-        android:background="@drawable/round_corner_background"
+        android:background="@drawable/bg_otp_item"
         android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
