--- a/app/src/main/res/layout/reached_your_limit_dialog.xml
+++ b/app/src/main/res/layout/reached_your_limit_dialog.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_12sdp"
-        android:background="@drawable/round_corner_background"
+        android:background="@drawable/bg_otp_item"
         android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,8 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_gravity="center"
-                android:layout_marginHorizontal="@dimen/_12sdp"
-                android:layout_marginStart="@dimen/_4sdp"
+                android:layout_marginHorizontal="@dimen/_16sdp"
                 android:layout_weight="1"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:layout_marginBottom="@dimen/_8sdp"
@@ -100,8 +99,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_gravity="center"
-                android:layout_marginHorizontal="@dimen/_12sdp"
-                android:layout_marginStart="@dimen/_4sdp"
+                android:layout_marginHorizontal="@dimen/_16sdp"
                 android:layout_weight="1"
                 android:layout_marginBottom="@dimen/_16sdp"
                 android:background="@color/blue"
