--- a/app/src/main/res/layout/fragment_upload_profile_photo.xml
+++ b/app/src/main/res/layout/fragment_upload_profile_photo.xml
@@ -87,6 +87,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
 
+    <TextView
+        android:id="@+id/tvMessage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/_24sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:fontFamily="@font/poppins"
+        android:gravity="center"
+        android:text="@string/add_a_profile_photo_to_help_others_recognise_and_connect_with_you"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_12sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvUploadProfile" />
+
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/ivProfile"
         android:layout_width="@dimen/_180sdp"
@@ -96,7 +112,7 @@
         android:src="@drawable/upload_profile_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvUploadProfile" />
+        app:layout_constraintTop_toBottomOf="@+id/tvMessage" />
 
     <TextView
         android:id="@+id/tvprofile"
