--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -171,7 +171,7 @@
                     android:textColorHighlight="@color/cursor_color"
                     android:textCursorDrawable="@drawable/custom_cursor"
                     android:textColor="@color/black"
-                    android:inputType="textPersonName"
+                    android:inputType="text"
                     android:imeOptions="actionNext"
                     android:paddingTop="20dp"
                     android:paddingStart="20dp"
@@ -222,47 +222,6 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tlReferral"
-                style="@style/CustomTextInputLayout"
-                android:theme="@style/EditTextThemeOverlay"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:hint="@string/referral_code"
-                android:elevation="8dp"
-                app:hintTextAppearance="@style/TextLabel"
-                android:layout_marginHorizontal="@dimen/_16sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                app:expandedHintEnabled="false"
-                app:boxStrokeColor="@color/blue"
-                app:cursorColor="@color/cursor_color"
-                android:textColorHint="@color/light_black"
-                app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
-                app:boxCornerRadiusTopEnd="@dimen/_20sdp"
-                app:boxCornerRadiusBottomStart="@dimen/_20sdp"
-                app:boxCornerRadiusTopStart="@dimen/_20sdp"
-                app:errorTextAppearance="@style/ErrorTextAppearance"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tlEmailName">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etReferralCode"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:paddingTop="20dp"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="@dimen/_12sdp"
-                    android:textColorHighlight="@color/cursor_color"
-                    android:textCursorDrawable="@drawable/custom_cursor"
-                    android:textColor="@color/black"
-                    android:imeOptions="actionNext"
-                    android:inputType="text"
-                    android:paddingStart="20dp"
-                    android:paddingEnd="20dp" />
-
-            </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/tlPassword"
@@ -288,7 +247,7 @@
                 app:errorTextAppearance="@style/ErrorTextAppearance"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tlReferral">
+                app:layout_constraintTop_toBottomOf="@id/tlEmailName">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etPassword"
@@ -307,6 +266,48 @@
                     android:paddingEnd="20dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tlReferral"
+                style="@style/CustomTextInputLayout"
+                android:theme="@style/EditTextThemeOverlay"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/referral_code"
+                android:elevation="8dp"
+                app:hintTextAppearance="@style/TextLabel"
+                android:layout_marginHorizontal="@dimen/_16sdp"
+                android:layout_marginTop="@dimen/_8sdp"
+                app:expandedHintEnabled="false"
+                app:boxStrokeColor="@color/blue"
+                app:cursorColor="@color/cursor_color"
+                android:textColorHint="@color/light_black"
+                app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
+                app:boxCornerRadiusTopEnd="@dimen/_20sdp"
+                app:boxCornerRadiusBottomStart="@dimen/_20sdp"
+                app:boxCornerRadiusTopStart="@dimen/_20sdp"
+                app:errorTextAppearance="@style/ErrorTextAppearance"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tlPassword">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etReferralCode"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:paddingTop="20dp"
+                    android:fontFamily="@font/poppins"
+                    android:textSize="@dimen/_12sdp"
+                    android:textColorHighlight="@color/cursor_color"
+                    android:textCursorDrawable="@drawable/custom_cursor"
+                    android:textColor="@color/black"
+                    android:imeOptions="actionNext"
+                    android:inputType="text"
+                    android:paddingStart="20dp"
+                    android:paddingEnd="20dp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/clTerms"
                 android:layout_width="match_parent"
@@ -315,7 +316,7 @@
                 app:layout_constraintEnd_toStartOf="parent"
                 android:layout_marginTop="@dimen/_24sdp"
                 android:layout_marginHorizontal="@dimen/_16sdp"
-                app:layout_constraintTop_toBottomOf="@+id/tlPassword">
+                app:layout_constraintTop_toBottomOf="@+id/tlReferral">
 
                 <CheckBox
                     android:id="@+id/cbTerms"
