--- a/app/src/main/res/layout/item_block_user.xml
+++ b/app/src/main/res/layout/item_block_user.xml
@@ -36,7 +36,7 @@
         android:textSize="@dimen/_12sdp"
         android:visibility="gone"
         android:fontFamily="@font/poppins_medium"
-        android:textColor="@color/black"
+        android:textColor="@color/blue"
         app:layout_constraintStart_toEndOf="@+id/ivImage"
         app:layout_constraintTop_toBottomOf="@+id/tvName"
         app:layout_constraintBottom_toBottomOf="@+id/ivImage"
